Pulse Commerce UX / Graphic Design Intern | SmartRecruiters. Integrity Web Consulting Interactive/UX Designer | SmartRecruiters. New Relic Careers - Associate UX Researcher. jobpal Mid UI/UX Designer | SmartRecruiters. Jobvite, Inc. Careers - Senior UX Designer. ServiceNow Careers - Senior Product Manager, Platform UX. JFDI Recruitment UX / UI  PHP Software Developer | SmartRecruiters. ServiceNow Careers - Staff UI/UX Software Engineer. Job Application for User Experience (UX) Intern at Bandwidth. Intelerad UX Analyst And Designer | SmartRecruiters.       UX Designer (Medior-Senior) - Usabilla     . Job Application for Senior UX Designer at Lightspeed ENG.       UI/UX Designer (m/w/d) at Lotum - Bad Nauheim - Dribbble Design Jobs   . Stellenangebot: UX Designer (m/w/d) im eGovernment-Umfeld (Düsseldorf) – dasauge® Stellenmarkt. Job Application for UX Design at TuSimple.     Contract UX Designer at closerlook . Frubana - UX I UI Designer. Job Application for UI/UX Designer at GreenPark Sports. ServiceNow Careers - Lead UX Researcher. Senior UX Designer & Researcher - Experian Careers. UI / UX Designer - Experian - Nottingham - Experian Careers. Ginkgo Bioworks - UX Designer. IT Pros Head of UI/UX Product Design - Profitable SaaS Company ($150K-$200K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters. ServiceNow Careers - Lead UX Architect. Job @ Sharpist (Berlin): UI/(UX) Designer | JOIN.       UI/UX Designer Internship - Helloprint     . Job Application for UI/UX Designer at Voltaiq. Job Application for UI/UX Designer at Unite Us. Job Application for UX Designer at Twitch. IBI Group UX/UI Designer | SmartRecruiters. UX Designer | PRODUCTHIRE.NET. America At Work - Sr. Consultant, UX Innovation Researcher. Kalo - Senior Product (UX) Designer. Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN. Freedom Financial Network Careers - Senior UX Designer. UX/UI Designer  Automotive Job, Gothenburg, Sweden | Technicon Design. Netf

--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/PulseCommerce/743999698684818-ux-graphic-design-intern'>Pulse Commerce UX / Graphic Design Intern | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/IntegrityWebConsulting/743999698684372-interactive-ux-designer'>Integrity Web Consulting Interactive/UX Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/newrelic/job/o70tbfwv'>New Relic Careers - Associate UX Researcher</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -49,11 +57,11 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nf7HqMwK'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=o9HIafws&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nf7HqMwK'>Jobvite, Inc. Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9xQ8fwo&__jvst=Employee+Referral&__jvsd=s6ellhwM&__jvsc=Twitter&bid=nTwDqMwJ'>ServiceNow Careers - Senior Product Manager, Platform UX</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o9xQ8fwo&__jvst=Employee+Referral&__jvsd=s6ellhwM&__jvsc=Twitter&bid=nTwDqMwJ'>ServiceNow Careers - Senior Product Manager, Platform UX</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -145,7 +153,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/voltaiq/jobs/1937977'>Job Application for UI/UX Designer at Voltaiq</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -165,15 +173,15 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/78d28061-9592-4edb-8897-63fdfa968fb1'>America At Work - Sr. Consultant, UX Innovation Researcher</a></h5> 
+<h5><a href='https://jobs.lever.co/americaatwork/78d28061-9592-4edb-8897-63fdfa968fb1'>America At Work - Sr. Consultant, UX Innovation Researcher</a></h5> 
 <p><span class="badge badge-light">Columbus, Ohio</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/177e35de-f0ca-4ac2-9af2-8f9b77a546b0'>Kalo - Senior Product (UX) Designer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deinestudienfinanzierung.join.com/jobs/467920-ui-ux-designer-m-w-d'>Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN</a></h5> 
+<h5><a href='https://deinestudienfinanzierung.join.com/jobs/467920-ui-ux-designer-m-w-d'>Job @ deineStudienfinanzierung (Berlin): UI/ UX De... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -215,7 +223,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/derivesystems/job/ocdl9fwD'>Derive Systems Careers - Sr. User Experience (UX) Designer</a></h5> 
 <p><span class="badge badge-light">Broomfield, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -311,7 +319,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585024'>Stellenangebot: UX Designer (d/m/w) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -329,7 +337,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/worldfirst/job/oDsobfwo'>WorldFirst Careers - UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/worldfirst/job/oDsobfwo'>WorldFirst Careers - UX Designer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -349,7 +357,7 @@
 <p><span class="badge badge-light">Kerala, India  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698471068-ux-designer-contract-'>McFadyen Digital UX Designer (Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Brazil  North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -371,7 +379,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/21724-UX-UI-Designer?source=twitter'>
       UX / UI Designer at Lighthouse London - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London London</span></p>
@@ -393,7 +401,7 @@
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
+<h5><a href='https://boards.greenhouse.io/traegergrills/jobs/1932391'>Job Application for Sr. Web UX Designer at Traeger Wood Pellet Grills</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -429,7 +437,7 @@
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://roverpass.applytojob.com/apply/GZ7uRbh5z8/UX-Designer-RoverPass'>UX Designer - RoverPass - RoverPass - Career Page</a></h5> 
+<h5><a href='http://roverpass.applytojob.com/apply/GZ7uRbh5z8/UX-Designer-RoverPass'>UX Designer - RoverPass - RoverPass - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -461,16 +469,6 @@
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=ougkbfwZ&__jvst=Employee+Referral&__jvsd=sjhePhwp&__jvsc=Twitter&bid=nEbQnMwj'>WP Engine Careers - Senior Director, User Experience - UX</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qL9aVfwJ&k=Job&j=oROrbfw1&__jvst=Employee&__jvsd=sVZebhw5&__jvsc=Twitter&bid=nR0NnMwi'>Loanpal Careers - Senior UX Designer</a></h5> 
-<p><span class="badge badge-light">Roseville, California</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
-      Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 
